...
    todoStore.toggle(id);
  };

  return (
    <SafeAreaView style={styles.container}>
      <TextInput
        testID="todo-textinput"
        value={text}
        placeholder="Add the title here"
        style={styles.inputStyle}
        onChangeText={onChangeText}
        onSubmitEditing={onPressAddTodo}
      />
...
